# image-annotations

./: .gitignore  plan.md  plan2.md  plan3.md  plan4.md  pyproject.toml  readme.md  research.md
src/image_annotate/: __init__.py  app.py  cli.py  models.py  renderer.py  tsv_io.py
src/image_annotate/gui/: annotation_list.py  config_panel.py  dialogs.py  file_tree.py  image_canvas.py  magnifier.py  main_window.py
src/image_annotate/utils/: coord_utils.py  metadata.py
tests/: test_coord_utils.py  test_tsv_io.py
