[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-annotate"
version = "0.1.0"
description = "Point annotation tool for images with PySide6 GUI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.6",
    "Pillow>=10.4",
    "click>=8.1",
    "Jinja2>=3.1",
]

[project.scripts]
image-annotate = "image_annotate.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-qt>=4",
    "black",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
